# hyperkit

./: .cursorrules  .gitignore  .mcp.json  .npmrc  .prettierignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPONENTS.json  CONTRIBUTING.md  COOKBOOK.md  HOOKS.md  LICENSE  PATTERNS.md  PRINCIPLES.md  README.md  ROADMAP.md  TECH-STACK.md  docs-manifest.json  eslint.config.js  knip.json  llms-full.txt  llms.txt  mcp-server.js  package.json  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
.changeset/: config.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.storybook/: main.ts  preview-scrollbar.css  preview.ts
cli/: README.md  index.ts
docs/: CSS_VARIABLES.md  INSTALL.md  LLM-UI-CONTROLLER.md  MIGRATION.md  SSR.md  file-explorer.md
examples/: effect-hooks-demo.tsx
scripts/: audit-css-vars.ts  ban-zod-any.sh  codemod-css-imports.mjs  generate-ai-docs.ts  generate-icons.mjs  generate-thumbnails.ts  screenshot.sh  smoke-ssg.mjs  tree-shake-test.ts
skills/: README.md  engineering-philosophy.md  hyperkit-first.md  premium-diagram-design.md  premium-ui-design.md
src/: index.ts  styles.css  test-setup.ts
thumbnails/: manifest.json
tools/sk-audit/: Cargo.toml
tools/sk-audit/src/: main.rs
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website-solid/: app.config.ts  package.json  tsconfig.json
(+2017 files in other folders)
