[package]
name = "sk-audit"
version = "0.1.0"
edition = "2024"
description = "AI discoverability scoring tool for SolidKit projects"
authors = ["Youssef Bouhjira"]

[dependencies]
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
walkdir = "2.5"
